@@ -2,5 +2,5 @@
 # This file is auto-generated by build scripts.
 # See:  rake update_version
 module Gem
-  RubyGemsVersion = '0.9.0.7'
+  RubyGemsVersion = '0.9.0.8'
 end
